tests/negative/AsPatternAlias.juvix
module AsPatternAlias;

f : Type -> Type;
f a@b := b;

end;
